[#139657691] added a swagger def file for idcloud (latest, squashed) and another for Oauth authentication. Python example works.